# Roman_Backend_Project

./: db.sqlite3  pyproject.toml
project/: settings.py  urls.py
webapi/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
webapi/migrations/: 0001_initial.py  0002_alter_dish_recipe.py  0003_alter_dish_recipe_alter_specialfunction_title.py  0004_alter_dish_type.py  0005_alter_dish_type_alter_specialfunction_title_and_more.py  0006_remove_dish_calories_remove_dish_carbohydrates_and_more.py  0007_dish_calories_dish_carbohydrates_dish_fats_and_more.py  0008_orderdish_order.py  0009_special_function.py  0010_rename_special_function_special_menu_for_children_and_more.py  0011_delete_special_menu_for_children.py  0012_alter_dish_carbohydrates_alter_dish_fats_and_more.py
